--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,15 @@ body {
 	@apply bg-gray-200;
 }
 
+input[type='text'],
+textarea {
+	@apply w-full block py-2 px-2 bg-gray-100 mb-4 rounded-md;
+}
+
+label.input-label {
+	@apply uppercase text-gray-700 font-semibold text-sm;
+}
+
 .main-page {
 	@apply bg-gray-400;
 }
