--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@ body {
 	@apply bg-gray-200;
 }
 
-input[type='text'],
+input.settings-page,
 textarea {
 	@apply w-full block py-2 px-2 bg-gray-100 mb-4 rounded-md;
 }
